# WOMBAT

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
archive/docs/: 2026-03-07-handoff-adaptive-boundary-portals.md  HANDOVER.md  HIERARCHICAL_ADAPTIVE_PLAN.md  LOGS.md  NEXT_STEPS.md
configs/: layers.yaml  system.yaml
data/countries/: AR.geojson  FR.geojson  GB.geojson  JP.geojson  TW.geojson  ZA.geojson
data/facilities/: README.md  atlas.csv  facilities_template.csv  peeringdb.csv  peeringdb_facility.tsv
data/landing_points/: std_landing_points.tsv
data/reference/: natural_earth_admin0_subset.geojson
docs/: ADAPTIVE_CELL_ROUTING.md  AGENT_HANDOVER.md  AGENT_HANDOVER_PROMPT.md  CODING_AGENT_ASSIGNMENT.md  IMPLEMENTATION_PLAN.md  PROJECT.md
frontend/: index.html  main.js  styles.css
frontend/demo-data/: country-mask-cells.json  facility-density-adaptive-metadata.json  facility-density-r7-regions-cells.json  manifest.json  r7-region-routes-TW.json  run-status.json  runs-catalog.json  ui-config.json
logs/: mistakes.md
logs/progress/: 2026-02-28-adaptive-facility-threshold-ui.md  2026-02-28-adaptive-level-range-r5-r9.md  2026-02-28-adaptive-neighbor-delta.md  2026-02-28-adaptive-output-level-range-r5-r9.md  2026-02-28-adaptive-strict-adjacency-failclosed.md  2026-02-28-adaptive-v2-tests-task-d.md  (+107 more)
scripts/: build_major_roads_graph.py  build_r7_route_ui_geojson.py  evaluate_major_roads_graph.py  export_static_demo_bundle.py  fetch_r7_region_routes.py  generate_arg_facility_density_map.py  generate_multilevel_h3_from_shp.py
(+73 files in other folders)
